Solved the problem with text align to center

--- a/src/client/containers/ResultPage/ResultPage.styles.css
+++ b/src/client/containers/ResultPage/ResultPage.styles.css
@@ -1,5 +1,6 @@
 .result-container {
   max-width: 414px;
+  height: 714px;
   position: fixed;
 }
 
@@ -14,13 +15,14 @@ li {
   margin-left: 6vh;
 }
 
-.card-container .drag-dots {
-  visibility: hidden;
-  border: 1px solid green;
-}
-
-.card-container .card-title {
-  width: 100%;
-  padding-right: 50px;
-  text-align: center;
+.candidate-resuts {
+  width: 368px;
+  height: 52px;
+  background: linear-gradient(90deg, #9400d3 0%, #4b0082 100%);
+  border-radius: 10px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 15px 22px;
 }
